mobile.css
html, body
{
  height: 100%;
  margin: 0;
}
body
{
  display: flex;
  flex-direction: column;
  font-size: 25px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  margin: 0;
  text-align: center;
}
a
{
  font-size: 50px;
}
h1
{
  margin-bottom: 0;
  font-size: 80px;
  text-align: center;
}
#profile 
{
  border-radius: 20%;
  width : 50vw;
  height : 50vw;
}

@media (prefers-color-scheme: dark)
{
    body
    {
        background: rgb(15, 15, 25);
        color: aliceblue
    }
    h1
    {
        color:aliceblue;
    }
    #main-footer {
      background-color: #000000;
    }
}
@media (prefers-color-scheme: light)
{
    body
    {
        background: aliceblue;
        color: rgb(5, 5, 10)
    }
    h1
    {
        color:rgb(5, 5, 10);
    }
    #profile
    {
        border: solid 5px rgb(15, 70, 80);
    }
    #main-footer {
      background-color: #222222;
    }
}
.text-img-container
{
    margin-bottom: 40px;
    margin-top: 40px;
    padding: 20px;
}

#description
{
  max-width: 80vw;
  margin: 0 auto;
  margin-bottom: 60px;
  padding: 20px;
  text-align: center;
}

.buttons-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 20px;
  padding: 30px;
}

.menu-button a
{
  border-radius: 30px;
  margin-top: 40px;
  margin-bottom: 40px;
  border: 8px solid rgb(93, 140, 168);
  background: linear-gradient(to bottom right, rgb(11, 36, 51), rgb(20, 20, 35));
  padding: 15px; 
  width: 400px;
  height: 300px;
  line-height: 2.5;
}

a
{
  color: rgb(93, 140, 168); 
}

#footer-bottom {
  background-color: #1f1f1f;
  background-color: rgba(0,0,0,0.32);
  padding: 15px 0 5px;
}

#footer-info {
  text-align: center;
  color: #666;
  padding-bottom: 10px;
  float: none;
}
#more-to-come
{
  padding: 40px;
}


#content
{
  flex: 1;
}

/* BUTTON FROM GITHUB */

/* <button class="button-3" role="button">foo</button> */
.pretty-button {
    appearance: none;
    background-color: rgb(11, 36, 51);
    border: 1px solid rgb(93, 140, 168);
    border-radius: 6px;
    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
    box-sizing: border-box;
    color: rgb(93, 140, 168);
    cursor: pointer;
    display: inline-block;
    font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
    font-size: 14px;
    font-weight: 600;
    line-height: 20px;
    padding: 6px 16px;
    position: relative;
    text-align: center;
    text-decoration: none;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    vertical-align: middle;
    white-space: nowrap;
  }
  
  .pretty-button:focus:not(:focus-visible):not(.focus-visible) {
    box-shadow: none;
    outline: none;
  }
  
  .pretty-button:hover {
    background-color: rgb(5, 21, 31);
  }
  
  .pretty-button:focus {
    box-shadow: rgb(5, 21, 31, .4) 0 0 0 3px;
    outline: none;
  }
  
  .pretty-button:disabled {
    background-color: rgb(145, 206, 243);
    border-color: rgb(216, 234, 245);
    color: rgb(216, 234, 245);
    cursor: default;
  }
  
  .pretty-button:active {
    background-color: rgb(11, 36, 51);
    box-shadow: rgb(11, 36, 51, .2) 0 1px 0 inset;
  }

